--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
     </div>
     <div class="box">
         <div class="box__properties">
-          <img src="/img/Vector Smart Object.png" alt="Недвижимость" class="box__img">
-          <div class="box__content">
+          <img src="/img/Vector Smart Object.png" alt="Недвижимость" class="box__img1">
+          <div class="box__content1">
             <h4 class="box__content-h4">Find Properties</h4>
             <p class="box__content-p">Sign up to browse the portfolio. <br>
                 Your journey to becoming a real <br> estate baron starts here.</p>
@@ -77,8 +77,8 @@
           </div>
         </div>
         <div class="box__bayers">
-          <img src="/img/Vector Smart Object2.png" alt="Покупатели" class="box__img">
-          <div class="box__content">
+          <img src="/img/Vector Smart Object2.png" alt="Покупатели" class="box__img2">
+          <div class="box__content2">
             <h4 class="box__content-h4">Find Buyers</h4>
             <p class="box__content-p">Sign up to browse the portfolio. <br>
                 Your journey to becoming a real <br> estate baron starts here.</p>
