--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </div>
     <div class="box">
         <div class="box__properties">
-          <img src="/img/Vector Smart Object.png" alt="Недвижимость" class="box__img1">
+          <img src="img/Vector Smart Object.png" alt="Недвижимость" class="box__img1">
           <div class="box__content1">
             <h4 class="box__content-h4">Find Properties</h4>
             <p class="box__content-p">Sign up to browse the portfolio. <br>
@@ -77,7 +77,7 @@
           </div>
         </div>
         <div class="box__bayers">
-          <img src="/img/Vector Smart Object2.png" alt="Покупатели" class="box__img2">
+          <img src="img/Vector Smart Object2.png" alt="Покупатели" class="box__img2">
           <div class="box__content2">
             <h4 class="box__content-h4">Find Buyers</h4>
             <p class="box__content-p">Sign up to browse the portfolio. <br>
