--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         <img src="img/Logo.png" alt="логотип" class="header__logo">
         <div class="header__menu">
             <ul class="header__menu-list">
-                <a href="#"><li class="header__menu-list-link">home</li></a>
-                <a href="#"><li class="header__menu-list-link">how it works</li></a>
-                <a href="#"><li class="header__menu-list-link">discover a project</li></a>
-                <a href="#"><li class="header__menu-list-link">blog</li></a>
-                <a href="#"><li class="header__menu-list-link">find out more</li></a>
+                <li class="header__menu-list-link"><a href="#">home</a></li>
+                <li class="header__menu-list-link"><a href="#">how it works</a></li>
+                <li class="header__menu-list-link"><a href="#">discover a project</a></li>
+                <li class="header__menu-list-link"><a href="#">blog</a></li>
+                <li class="header__menu-list-link"><a href="#">find out more</a></li>
             </ul>
         </div>
         <a href="" class="header__login">login</a>
@@ -38,7 +38,7 @@
     </div>
     <div class="container">
         <div class="container__content1">
-            <img src="img/Shape 846.png" alt="Лого" class="container__logo">
+            <img src="img/Shape_846.png" alt="Лого" class="container__logo">
             <h2 class="container__title">Our work is the presentation <br> of our capabilities. </h2>
             <p class="container__p">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt et rerum vitae similique quis omnis <br> corrupti consequatur dignissimos tempora quasi?</p><br><br>
             <p class="container__p">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore et omnis cum quod tempora <br> atque, natus perferendis velit quas deserunt?</p>
@@ -68,7 +68,7 @@
     </div>
     <div class="box">
         <div class="box__properties">
-          <img src="img/Vector Smart Object.png" alt="Недвижимость" class="box__img1">
+          <img src="img/Vector_Smart_Object.png" alt="Недвижимость" class="box__img1">
           <div class="box__content1">
             <h4 class="box__content-h4">Find Properties</h4>
             <p class="box__content-p">Sign up to browse the portfolio. <br>
@@ -77,7 +77,7 @@
           </div>
         </div>
         <div class="box__bayers">
-          <img src="img/Vector Smart Object2.png" alt="Покупатели" class="box__img2">
+          <img src="img/Vector_Smart_Object2.png" alt="Покупатели" class="box__img2">
           <div class="box__content2">
             <h4 class="box__content-h4">Find Buyers</h4>
             <p class="box__content-p">Sign up to browse the portfolio. <br>
@@ -98,11 +98,11 @@
         </div>
         <div class="project__2">
             <div class="projects__card">
-                <img src="img/NEW2.png" alt="" width="300px">
+                <img src="img/NEW2.png" alt="image" >
                 <div class="projects__card-content">
                     <h5 class="projects__card-h5">Ontario Tower , LONDON</h5>
                     <p class="projects__card-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna eliqua.</p>
-                    <img src="img/Rounded Rectangle 7 copy.png" alt="" class="projects__rectangle">
+                    <img src="img/Rounded_Rectangle_7_copy.png" alt="" class="projects__rectangle">
                     <div class="projects__card-div">
                         <p>10% Funded</p>
                         <p>8 Days Left</p>
@@ -110,16 +110,16 @@
                     <hr class="projects__hr">
                     <div class="projects__div">
                         <p class="projects__link">See Project Details</p>
-                        <img src="img/Shape 646 copy 4.png" alt="">
+                        <img src="img/Shape_646_copy_4.png" alt="">
                     </div>
                 </div>
             </div>
             <div class="projects__card">
-                <img src="img/NEW.png" alt="" height="227 px" width="300px">
+                <img src="img/NEW.png" alt="image" >
                 <div class="projects__card-content">
                     <h5 class="projects__card-h5">Ontario Tower , LONDON</h5>
                     <p class="projects__card-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna eliqua.</p>
-                    <img src="img/Rounded Rectangle 8 copy.png" alt="" class="projects__rectangle">
+                    <img src="img/Rounded_Rectangle_8_copy.png" alt="image" class="projects__rectangle">
                     <div class="projects__card-div">
                         <p>60% Funded</p>
                         <p>8 Days Left</p>
@@ -127,16 +127,16 @@
                     <hr class="projects__hr">
                     <div class="projects__div">
                         <p class="projects__link">See Project Details</p>
-                        <img src="img/Shape 646 copy 4.png" alt="">
+                        <img src="img/Shape_646_copy_4.png" alt="image">
                     </div>
                 </div>
             </div>
             <div class="projects__card">
-                <img src="img/NEW2.png" alt="" width="300px">
+                <img src="img/NEW2.png" alt="image">
                 <div class="projects__card-content">
                     <h5 class="projects__card-h5">Ontario Tower , LONDON</h5>
                     <p class="projects__card-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna eliqua.</p>
-                    <img src="img/Rounded Rectangle 7 copy.png" alt="" class="projects__rectangle">
+                    <img src="img/Rounded_Rectangle_7_copy.png" alt="image" class="projects__rectangle">
                     <div class="projects__card-div">
                         <p>10% Funded</p>
                         <p>8 Days Left</p>
@@ -144,7 +144,7 @@
                     <hr class="projects__hr">
                     <div class="projects__div">
                         <p class="projects__link">See Project Details</p>
-                        <img src="img/Shape 646 copy 4.png" alt="">
+                        <img src="img/Shape_646_copy_4.png" alt="">
                     </div>
                 </div>
             </div>
@@ -160,7 +160,7 @@
                     <p class="community__feedback-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut velit voluptates tempora placeat eveniet, sapiente labore assumenda eaque nisi quas.</p>
                 </div>
                 <div class="community__comment">
-                    <img src="img/Layer 23.png" alt="Beckham">
+                    <img src="img/Layer_23.png" alt="Beckham">
                     <p class="community__comment-p">David Beckham</p>
                 </div>
             </div>  
@@ -170,14 +170,14 @@
                     <p class="community__feedback-p">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis dolorum magni veniam eum minima, modi earum commodi suscipit doloribus voluptate!</p>
                 </div>
                 <div class="community__comment">
-                    <img src="img/Layer 24.png" alt="Beckham">
+                    <img src="img/Layer_24.png" alt="Beckham">
                     <p class="community__comment-p">David Beckham</p>
                 </div>
             </div>     
         </div>
     </div>
     <footer class="footer">
-        <img src="img/Layer 25.png" alt="" class="footer__img">
+        <img src="img/Layer_25.png" alt="image" class="footer__img">
         <hr class="footer__hr">
         <p class="footer__p">Copyright © 2001 - 2014  Cssauthor.com</p>
     </footer>
